// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`InputPrompt > History Navigation and Completion Suppression > should not render suggestions during history navigation 1`] = `
"▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀
 > second message                                                                                   
▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄
"
`;

exports[`InputPrompt > command search (Ctrl+R when not in shell) > expands and collapses long suggestion via Right/Left arrows > command-search-render-collapsed-match 1`] = `
"▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀
 (r:)    Type your message or @path/to/file                                                         
▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄
 lllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllll → 
 lllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllll   
 ...                                                                           
"
`;

exports[`InputPrompt > command search (Ctrl+R when not in shell) > expands and collapses long suggestion via Right/Left arrows > command-search-render-expanded-match 1`] = `
"▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀
 (r:)    Type your message or @path/to/file                                                         
▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄
 lllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllll ← 
 lllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllll   
 llllllllllllllllllllllllllllllllllllllllllllllllll                            
"
`;

exports[`InputPrompt > command search (Ctrl+R when not in shell) > renders match window and expanded view (snapshots) > command-search-render-collapsed-match 1`] = `
"▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀
 (r:)  commit                                                                                       
▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄
 git commit -m "feat: add search" in src/app                                   
"
`;

exports[`InputPrompt > command search (Ctrl+R when not in shell) > renders match window and expanded view (snapshots) > command-search-render-expanded-match 1`] = `
"▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀
 (r:)  commit                                                                                       
▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄
 git commit -m "feat: add search" in src/app                                   
"
`;

exports[`InputPrompt > image path transformation snapshots > should snapshot collapsed image path 1`] = `
"▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀
 > [Image ...reenshot2x.png]                                                                        
▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄
"
`;

exports[`InputPrompt > image path transformation snapshots > should snapshot expanded image path when cursor is on it 1`] = `
"▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀
 > @/path/to/screenshots/screenshot2x.png                                                           
▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄
"
`;

exports[`InputPrompt > mouse interaction > should toggle paste expansion on double-click 1`] = `
"▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀
 > [Pasted Text: 10 lines]                                                                          
▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄
"
`;

exports[`InputPrompt > mouse interaction > should toggle paste expansion on double-click 2`] = `
"▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀
 > [Pasted Text: 10 lines]                                                                          
▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄
"
`;

exports[`InputPrompt > mouse interaction > should toggle paste expansion on double-click 3`] = `
"▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀
 > [Pasted Text: 10 lines]                                                                          
▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄
"
`;

exports[`InputPrompt > mouse interaction > should toggle paste expansion on double-click 4`] = `
"
  ERROR  config.getBaseLlmClient is not a function

 packages/cli/src/ui/components/InputPrompt.tsx:246:36

 243:   } = useUIState();
 244:   const [vibeModeActive, setVibeModeActive] = useState(false);
 245:   const generateVibeOptions = useMemo(
 246:     () => makeVibeGenerator(config.getBaseLlmClient()),
 247:     [config],
 248:   );
 249:   const vibeContext = useMemo(

 -  (packages/cli/src/ui/components/InputPrompt.tsx:246:36)
 - mountMemo (node_modules/react-reconciler/cjs/react-reconciler.development.js:4272:23)
 - Object.useMemo (node_modules/react-reconciler/cjs/react-reconciler.development.js:14920:18)
 - process.env.NODE_ENV.exports.useMemo (node_modules/react/cjs/react.development.js:1251:34)
 - InputPrompt (packages/cli/src/ui/components/InputPrompt.tsx:245:31)
 -Object.react-stack-bottom-fr
  me                          (node_modules/react-reconciler/cjs/react-reconciler.development.js:15
                              859:20)
 - renderWithHooks (node_modules/react-reconciler/cjs/react-reconciler.development.js:3221:22)
 -updateFunctionComponent
                         (node_modules/react-reconciler/cjs/react-reconciler.development.js:6475:19
                         )
 - beginWork (node_modules/react-reconciler/cjs/react-reconciler.development.js:8009:18)
 - runWithFiberInDEV (node_modules/react-reconciler/cjs/react-reconciler.development.js:1738:13)
"
`;

exports[`InputPrompt > mouse interaction > should toggle paste expansion on double-click 5`] = `
"
  ERROR  config.getBaseLlmClient is not a function

 packages/cli/src/ui/components/InputPrompt.tsx:246:36

 243:   } = useUIState();
 244:   const [vibeModeActive, setVibeModeActive] = useState(false);
 245:   const generateVibeOptions = useMemo(
 246:     () => makeVibeGenerator(config.getBaseLlmClient()),
 247:     [config],
 248:   );
 249:   const vibeContext = useMemo(

 -  (packages/cli/src/ui/components/InputPrompt.tsx:246:36)
 - mountMemo (node_modules/react-reconciler/cjs/react-reconciler.development.js:4272:23)
 - Object.useMemo (node_modules/react-reconciler/cjs/react-reconciler.development.js:14920:18)
 - process.env.NODE_ENV.exports.useMemo (node_modules/react/cjs/react.development.js:1251:34)
 - InputPrompt (packages/cli/src/ui/components/InputPrompt.tsx:245:31)
 -Object.react-stack-bottom-fr
  me                          (node_modules/react-reconciler/cjs/react-reconciler.development.js:15
                              859:20)
 - renderWithHooks (node_modules/react-reconciler/cjs/react-reconciler.development.js:3221:22)
 -updateFunctionComponent
                         (node_modules/react-reconciler/cjs/react-reconciler.development.js:6475:19
                         )
 - beginWork (node_modules/react-reconciler/cjs/react-reconciler.development.js:8009:18)
 - runWithFiberInDEV (node_modules/react-reconciler/cjs/react-reconciler.development.js:1738:13)
"
`;

exports[`InputPrompt > mouse interaction > should toggle paste expansion on double-click 6`] = `
"
  ERROR  config.getBaseLlmClient is not a function

 packages/cli/src/ui/components/InputPrompt.tsx:246:36

 243:   } = useUIState();
 244:   const [vibeModeActive, setVibeModeActive] = useState(false);
 245:   const generateVibeOptions = useMemo(
 246:     () => makeVibeGenerator(config.getBaseLlmClient()),
 247:     [config],
 248:   );
 249:   const vibeContext = useMemo(

 -  (packages/cli/src/ui/components/InputPrompt.tsx:246:36)
 - mountMemo (node_modules/react-reconciler/cjs/react-reconciler.development.js:4272:23)
 - Object.useMemo (node_modules/react-reconciler/cjs/react-reconciler.development.js:14920:18)
 - process.env.NODE_ENV.exports.useMemo (node_modules/react/cjs/react.development.js:1251:34)
 - InputPrompt (packages/cli/src/ui/components/InputPrompt.tsx:245:31)
 -Object.react-stack-bottom-fr
  me                          (node_modules/react-reconciler/cjs/react-reconciler.development.js:15
                              859:20)
 - renderWithHooks (node_modules/react-reconciler/cjs/react-reconciler.development.js:3221:22)
 -updateFunctionComponent
                         (node_modules/react-reconciler/cjs/react-reconciler.development.js:6475:19
                         )
 - beginWork (node_modules/react-reconciler/cjs/react-reconciler.development.js:8009:18)
 - runWithFiberInDEV (node_modules/react-reconciler/cjs/react-reconciler.development.js:1738:13)
"
`;

exports[`InputPrompt > mouse interaction > should toggle paste expansion on double-click 7`] = `
"
  ERROR  config.getBaseLlmClient is not a function

 src/ui/components/InputPrompt.tsx:247:36

 244:   } = useUIState();
 245:   const [vibeModeActive, setVibeModeActive] = useState(false);
 246:   const vibeGenerator = useMemo(
 247:     () => makeVibeGenerator(config.getBaseLlmClient()),
 248:     [config],
 249:   );
 250:   const vibeContext = useMemo(

 -  (src/ui/components/InputPrompt.tsx:247:36)
 -mountMem 
          (/Users/harrischan/Github/gemini-cli/node_modules/react-reconciler/cjs/react-reconciler.d
          evelopment.js:4272:23)
 -Object.useMe 
  o           (/Users/harrischan/Github/gemini-cli/node_modules/react-reconciler/cjs/react-reconcil
              er.development.js:14920:18)
 -process.env.NODE_ENV.exports 
  useMemo                     (/Users/harrischan/Github/gemini-cli/node_modules/react/cjs/react.dev
                              elopment.js:1251:34)
 - InputPrompt (src/ui/components/InputPrompt.tsx:246:25)
 -Object.react-stack-bott 
  m-frame                (/Users/harrischan/Github/gemini-cli/node_modules/react-reconciler/cjs/rea
                         ct-reconciler.development.js:15859:20)
 -renderWithHoo 
  s            (/Users/harrischan/Github/gemini-cli/node_modules/react-reconciler/cjs/react-reconci
               ler.development.js:3221:22)
 -updateFunctionComp 
  nent              (/Users/harrischan/Github/gemini-cli/node_modules/react-reconciler/cjs/react-re
                    conciler.development.js:6475:19)
 -beginWor 
          (/Users/harrischan/Github/gemini-cli/node_modules/react-reconciler/cjs/react-reconciler.d
          evelopment.js:8009:18)
 -runWithFiberIn 
  EV            (/Users/harrischan/Github/gemini-cli/node_modules/react-reconciler/cjs/react-reconc
                iler.development.js:1738:13)
"
`;

exports[`InputPrompt > mouse interaction > should toggle paste expansion on double-click 8`] = `
"
  ERROR  config.getBaseLlmClient is not a function

 src/ui/components/InputPrompt.tsx:247:36

 244:   } = useUIState();
 245:   const [vibeModeActive, setVibeModeActive] = useState(false);
 246:   const vibeGenerator = useMemo(
 247:     () => makeVibeGenerator(config.getBaseLlmClient()),
 248:     [config],
 249:   );
 250:   const vibeContext = useMemo(

 -  (src/ui/components/InputPrompt.tsx:247:36)
 -mountMem 
          (/Users/harrischan/Github/gemini-cli/node_modules/react-reconciler/cjs/react-reconciler.d
          evelopment.js:4272:23)
 -Object.useMe 
  o           (/Users/harrischan/Github/gemini-cli/node_modules/react-reconciler/cjs/react-reconcil
              er.development.js:14920:18)
 -process.env.NODE_ENV.exports 
  useMemo                     (/Users/harrischan/Github/gemini-cli/node_modules/react/cjs/react.dev
                              elopment.js:1251:34)
 - InputPrompt (src/ui/components/InputPrompt.tsx:246:25)
 -Object.react-stack-bott 
  m-frame                (/Users/harrischan/Github/gemini-cli/node_modules/react-reconciler/cjs/rea
                         ct-reconciler.development.js:15859:20)
 -renderWithHoo 
  s            (/Users/harrischan/Github/gemini-cli/node_modules/react-reconciler/cjs/react-reconci
               ler.development.js:3221:22)
 -updateFunctionComp 
  nent              (/Users/harrischan/Github/gemini-cli/node_modules/react-reconciler/cjs/react-re
                    conciler.development.js:6475:19)
 -beginWor 
          (/Users/harrischan/Github/gemini-cli/node_modules/react-reconciler/cjs/react-reconciler.d
          evelopment.js:8009:18)
 -runWithFiberIn 
  EV            (/Users/harrischan/Github/gemini-cli/node_modules/react-reconciler/cjs/react-reconc
                iler.development.js:1738:13)
"
`;

exports[`InputPrompt > mouse interaction > should toggle paste expansion on double-click 9`] = `
"
  ERROR  config.getBaseLlmClient is not a function

 src/ui/components/InputPrompt.tsx:247:36

 244:   } = useUIState();
 245:   const [vibeModeActive, setVibeModeActive] = useState(false);
 246:   const vibeGenerator = useMemo(
 247:     () => makeVibeGenerator(config.getBaseLlmClient()),
 248:     [config],
 249:   );
 250:   const vibeContext = useMemo(

 -  (src/ui/components/InputPrompt.tsx:247:36)
 -mountMem 
          (/Users/harrischan/Github/gemini-cli/node_modules/react-reconciler/cjs/react-reconciler.d
          evelopment.js:4272:23)
 -Object.useMe 
  o           (/Users/harrischan/Github/gemini-cli/node_modules/react-reconciler/cjs/react-reconcil
              er.development.js:14920:18)
 -process.env.NODE_ENV.exports 
  useMemo                     (/Users/harrischan/Github/gemini-cli/node_modules/react/cjs/react.dev
                              elopment.js:1251:34)
 - InputPrompt (src/ui/components/InputPrompt.tsx:246:25)
 -Object.react-stack-bott 
  m-frame                (/Users/harrischan/Github/gemini-cli/node_modules/react-reconciler/cjs/rea
                         ct-reconciler.development.js:15859:20)
 -renderWithHoo 
  s            (/Users/harrischan/Github/gemini-cli/node_modules/react-reconciler/cjs/react-reconci
               ler.development.js:3221:22)
 -updateFunctionComp 
  nent              (/Users/harrischan/Github/gemini-cli/node_modules/react-reconciler/cjs/react-re
                    conciler.development.js:6475:19)
 -beginWor 
          (/Users/harrischan/Github/gemini-cli/node_modules/react-reconciler/cjs/react-reconciler.d
          evelopment.js:8009:18)
 -runWithFiberIn 
  EV            (/Users/harrischan/Github/gemini-cli/node_modules/react-reconciler/cjs/react-reconc
                iler.development.js:1738:13)
"
`;

exports[`InputPrompt > mouse interaction > should toggle paste expansion on double-click 10`] = `
"
  ERROR  config.getBaseLlmClient is not a function

 src/ui/components/InputPrompt.tsx:248:36

 245:   const [vibeModeActive, setVibeModeActive] = useState(false);
 246:   const [vibeDraft, setVibeDraft] = useState('');
 247:   const vibeGenerator = useMemo(
 248:     () => makeVibeGenerator(config.getBaseLlmClient()),
 249:     [config],
 250:   );
 251:   const vibeContext = useMemo(

 -  (src/ui/components/InputPrompt.tsx:248:36)
 -mountMem 
          (/Users/harrischan/Github/gemini-cli/node_modules/react-reconciler/cjs/react-reconciler.d
          evelopment.js:4272:23)
 -Object.useMe 
  o           (/Users/harrischan/Github/gemini-cli/node_modules/react-reconciler/cjs/react-reconcil
              er.development.js:14920:18)
 -process.env.NODE_ENV.exports 
  useMemo                     (/Users/harrischan/Github/gemini-cli/node_modules/react/cjs/react.dev
                              elopment.js:1251:34)
 - InputPrompt (src/ui/components/InputPrompt.tsx:247:25)
 -Object.react-stack-bott 
  m-frame                (/Users/harrischan/Github/gemini-cli/node_modules/react-reconciler/cjs/rea
                         ct-reconciler.development.js:15859:20)
 -renderWithHoo 
  s            (/Users/harrischan/Github/gemini-cli/node_modules/react-reconciler/cjs/react-reconci
               ler.development.js:3221:22)
 -updateFunctionComp 
  nent              (/Users/harrischan/Github/gemini-cli/node_modules/react-reconciler/cjs/react-re
                    conciler.development.js:6475:19)
 -beginWor 
          (/Users/harrischan/Github/gemini-cli/node_modules/react-reconciler/cjs/react-reconciler.d
          evelopment.js:8009:18)
 -runWithFiberIn 
  EV            (/Users/harrischan/Github/gemini-cli/node_modules/react-reconciler/cjs/react-reconc
                iler.development.js:1738:13)
"
`;

exports[`InputPrompt > mouse interaction > should toggle paste expansion on double-click 11`] = `
"
  ERROR  config.getBaseLlmClient is not a function

 src/ui/components/InputPrompt.tsx:248:36

 245:   const [vibeModeActive, setVibeModeActive] = useState(false);
 246:   const [vibeDraft, setVibeDraft] = useState('');
 247:   const vibeGenerator = useMemo(
 248:     () => makeVibeGenerator(config.getBaseLlmClient()),
 249:     [config],
 250:   );
 251:   const vibeContext = useMemo(

 -  (src/ui/components/InputPrompt.tsx:248:36)
 -mountMem 
          (/Users/harrischan/Github/gemini-cli/node_modules/react-reconciler/cjs/react-reconciler.d
          evelopment.js:4272:23)
 -Object.useMe 
  o           (/Users/harrischan/Github/gemini-cli/node_modules/react-reconciler/cjs/react-reconcil
              er.development.js:14920:18)
 -process.env.NODE_ENV.exports 
  useMemo                     (/Users/harrischan/Github/gemini-cli/node_modules/react/cjs/react.dev
                              elopment.js:1251:34)
 - InputPrompt (src/ui/components/InputPrompt.tsx:247:25)
 -Object.react-stack-bott 
  m-frame                (/Users/harrischan/Github/gemini-cli/node_modules/react-reconciler/cjs/rea
                         ct-reconciler.development.js:15859:20)
 -renderWithHoo 
  s            (/Users/harrischan/Github/gemini-cli/node_modules/react-reconciler/cjs/react-reconci
               ler.development.js:3221:22)
 -updateFunctionComp 
  nent              (/Users/harrischan/Github/gemini-cli/node_modules/react-reconciler/cjs/react-re
                    conciler.development.js:6475:19)
 -beginWor 
          (/Users/harrischan/Github/gemini-cli/node_modules/react-reconciler/cjs/react-reconciler.d
          evelopment.js:8009:18)
 -runWithFiberIn 
  EV            (/Users/harrischan/Github/gemini-cli/node_modules/react-reconciler/cjs/react-reconc
                iler.development.js:1738:13)
"
`;

exports[`InputPrompt > mouse interaction > should toggle paste expansion on double-click 12`] = `
"
  ERROR  config.getBaseLlmClient is not a function

 src/ui/components/InputPrompt.tsx:248:36

 245:   const [vibeModeActive, setVibeModeActive] = useState(false);
 246:   const [vibeDraft, setVibeDraft] = useState('');
 247:   const vibeGenerator = useMemo(
 248:     () => makeVibeGenerator(config.getBaseLlmClient()),
 249:     [config],
 250:   );
 251:   const vibeContext = useMemo(

 -  (src/ui/components/InputPrompt.tsx:248:36)
 -mountMem 
          (/Users/harrischan/Github/gemini-cli/node_modules/react-reconciler/cjs/react-reconciler.d
          evelopment.js:4272:23)
 -Object.useMe 
  o           (/Users/harrischan/Github/gemini-cli/node_modules/react-reconciler/cjs/react-reconcil
              er.development.js:14920:18)
 -process.env.NODE_ENV.exports 
  useMemo                     (/Users/harrischan/Github/gemini-cli/node_modules/react/cjs/react.dev
                              elopment.js:1251:34)
 - InputPrompt (src/ui/components/InputPrompt.tsx:247:25)
 -Object.react-stack-bott 
  m-frame                (/Users/harrischan/Github/gemini-cli/node_modules/react-reconciler/cjs/rea
                         ct-reconciler.development.js:15859:20)
 -renderWithHoo 
  s            (/Users/harrischan/Github/gemini-cli/node_modules/react-reconciler/cjs/react-reconci
               ler.development.js:3221:22)
 -updateFunctionComp 
  nent              (/Users/harrischan/Github/gemini-cli/node_modules/react-reconciler/cjs/react-re
                    conciler.development.js:6475:19)
 -beginWor 
          (/Users/harrischan/Github/gemini-cli/node_modules/react-reconciler/cjs/react-reconciler.d
          evelopment.js:8009:18)
 -runWithFiberIn 
  EV            (/Users/harrischan/Github/gemini-cli/node_modules/react-reconciler/cjs/react-reconc
                iler.development.js:1738:13)
"
`;

exports[`InputPrompt > snapshots > should not show inverted cursor when shell is focused 1`] = `
"▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀
 >   Type your message or @path/to/file                                                             
▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄
"
`;

exports[`InputPrompt > snapshots > should render correctly in shell mode 1`] = `
"▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀
 !   Type your message or @path/to/file                                                             
▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄
"
`;

exports[`InputPrompt > snapshots > should render correctly in yolo mode 1`] = `
"▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀
 *   Type your message or @path/to/file                                                             
▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄
"
`;

exports[`InputPrompt > snapshots > should render correctly when accepting edits 1`] = `
"▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀
 >   Type your message or @path/to/file                                                             
▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄
"
`;
